# eclair-rust-bindings

./: Cargo.toml  LICENSE  Makefile  README.md
eclair_bindings/: Cargo.toml  README.md  build.rs
eclair_bindings/src/: bindings.rs  eclair.c  internal.rs  lib.rs
eclair_bindings_derive/: Cargo.toml  README.md  build.rs
eclair_bindings_derive/src/: lib.rs  parsing.rs  struct_analysis.rs  types.rs
eclair_bindings_derive/tests/: derive_test.rs
eclair_bindings_derive/tests/fixtures/: test.eclair  test.ll
src/: lib.rs
src/eclair/: bindings.rs  internal.rs  marshal.rs  mod.rs
