[package]
name = "eclair_bindings"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luc-tielen/eclair-rust-bindings.git"
readme = "README.md"
license = "BSD-3-Clause"
description = "idiomatic Rust wrapper around the low level Eclair Datalog API"
homepage = "https://github.com/luc-tielen/eclair-rust-bindings.git"
keywords = ["datalog", "bindings", "ffi", "eclair"]
categories = ["compilers", "database", "api-bindings", "development-tools::ffi", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi-opaque = "2.0.1"
libc = "0.2.139"
