[package]
name = "eclair_bindings_derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luc-tielen/eclair-rust-bindings.git"
readme = "README.md"
license = "BSD-3-Clause"
description = "proc-macro crate, for use together with 'eclair_bindings'"
homepage = "https://github.com/luc-tielen/eclair-rust-bindings.git"
keywords = ["datalog", "bindings", "proc-macro", "ffi", "eclair"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[build-dependencies]
cc = "1.0.79"

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = "1.0.107"

[dev-dependencies]
eclair_bindings = { path = "../eclair_bindings" }
